--- a/src/index.html
+++ b/src/index.html
@@ -17,16 +17,15 @@
       <h3 id="operator">+</h3>
       <div class="input-group">
         <label for="num2">Enter second number:</label>
-        <input  id="num2" />
+        <input id="num2" />
       </div>
       <h3 id="result">Result:</h3>
 
       <div class="button-group">
-        <button onclick="calculate()">Calculate</button>
+        <button onclick="calculate('add')">Addition</button>
+        <button onclick="calculate('subtract')">Subtraction</button>
         <button onclick="resetFields()">Reset</button>
       </div>
-
-
     </div>
 
     <script src="index.js"></script>
