Operations in backend

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -24,6 +24,8 @@
       <div class="button-group">
         <button onclick="calculate('add')">Addition</button>
         <button onclick="calculate('subtract')">Subtraction</button>
+        <button onclick="calculate('divide')">Division</button>
+        <button onclick="calculate('multiply')">Multiplication</button>
         <button onclick="resetFields()">Reset</button>
       </div>
     </div>
